<resources>
  <string name="app_name">Practice_W05_LinearLayout</string>

  <string name="login_title">Login Form</string>
  <string name="login_desc">Fill out the form below to login to my super awesome imaginary control panel</string>
  <string name="str_username">Username</string>
  <string name="str_password">Password</string>
  <string name="str_register">Register</string>
  <string name="str_sign_in">Sign In</string>
</resources>